<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layout_recevie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/send_sep"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@id/control_sep">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:typeface="monospace"
            tools:text="..............." />

        <ImageButton
            android:id="@+id/btn_clear"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:alpha="0.5"
            android:background="@drawable/clear_bg" />
    </RelativeLayout>

    <View
        android:id="@+id/control_sep"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_above="@id/send_sep"
        android:layout_toLeftOf="@id/layout_control"
        android:background="#808080" />

    <View
        android:id="@+id/send_sep"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/layout_send"
        android:layout_marginBottom="5dp"
        android:background="#808080" />

    <LinearLayout
        android:id="@+id/layout_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sendEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/input_type_hexletter"
                android:maxLength="50"
                android:text="01234567" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/send" />

        <Button
            android:id="@+id/btn_485"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="485状态" />

        <Button
            android:id="@+id/btn_clean_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clean_count" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_control"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sp_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/sp_baud"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_number"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_count"
                    android:inputType="number"
                    android:text="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_send_cycle"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_cycle"
                    android:inputType="number"
                    android:text="50" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_datainc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/data_inc" />

        <CheckBox
            android:id="@+id/cb_hex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/show_hex" />

        <CheckBox
            android:id="@+id/cb_not_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/not_show" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="s:0 r:0"
            android:textSize="20dp" />
    </LinearLayout>
</RelativeLayout>
